@@ -80,7 +80,7 @@ public final class Helper {
     public static String nullCheck(String value) {
         Optional<String> opt = Optional.ofNullable(value);
         if (opt.isPresent()) {
-            return value.replaceAll("\"", "'");
+            return value.replace("\"", "'");
         } else {
             return "";
         }
@@ -127,7 +127,7 @@ public final class Helper {
                 caseData.setClaimantWorkAddressQRespondent(dynamicFixedListType);
             }
             //Default dynamic list
-            caseData.getClaimantWorkAddressQRespondent().setValue(listItems.get(0));
+            caseData.getClaimantWorkAddressQRespondent().setValue(listItems.getFirst());
         }
         return caseData;
     }
@@ -144,9 +144,9 @@ public final class Helper {
                     .toList();
 
             if (caseData.getRespondentCollection().size() == 1
-                    && YES.equals(caseData.getRespondentCollection().get(0).getValue().getResponseStruckOut())
-                    && YES.equals(caseData.getRespondentCollection().get(0).getValue().getResponseReceived())
-                    && !isNullOrEmpty(caseData.getRespondentCollection().get(0)
+                    && YES.equals(caseData.getRespondentCollection().getFirst().getValue().getResponseStruckOut())
+                    && YES.equals(caseData.getRespondentCollection().getFirst().getValue().getResponseReceived())
+                    && !isNullOrEmpty(caseData.getRespondentCollection().getFirst()
                     .getValue().getResponseReceivedDate())) {
                 return caseData.getRespondentCollection();
             }
@@ -175,39 +175,6 @@ public final class Helper {
         String sectionName = ewSection.isEmpty()
                 ? DocumentHelper.getScotSectionName(correspondenceScotType) : ewSection;
         return DocumentHelper.getTemplateName(correspondenceType, correspondenceScotType) + "_" + sectionName;
-    }
-
-    private static List<DynamicValueType> createDynamicRespondentNameList(
-            List<RespondentSumTypeItem> respondentCollection) {
-        List<DynamicValueType> listItems = new ArrayList<>();
-        if (respondentCollection != null) {
-            for (RespondentSumTypeItem respondentSumTypeItem : respondentCollection) {
-                RespondentSumType respondentSumType = respondentSumTypeItem.getValue();
-                if (respondentSumType.getResponseStruckOut() == null
-                        || respondentSumType.getResponseStruckOut().equals(NO)) {
-                    DynamicValueType dynamicValueType = new DynamicValueType();
-                    dynamicValueType.setCode(respondentSumType.getRespondentName());
-                    dynamicValueType.setLabel(respondentSumType.getRespondentName());
-                    listItems.add(dynamicValueType);
-                }
-            }
-        }
-        return listItems;
-    }
-
-    public static void midRespondentECC(CaseData caseData, CaseData originalCaseData) {
-        List<DynamicValueType> listItems = createDynamicRespondentNameList(originalCaseData.getRespondentCollection());
-        if (!listItems.isEmpty()) {
-            if (caseData.getRespondentECC() != null) {
-                caseData.getRespondentECC().setListItems(listItems);
-            } else {
-                DynamicFixedListType dynamicFixedListType = new DynamicFixedListType();
-                dynamicFixedListType.setListItems(listItems);
-                caseData.setRespondentECC(dynamicFixedListType);
-            }
-            //Default dynamic list
-            caseData.getRespondentECC().setValue(listItems.get(0));
-        }
     }
 
     public static List<DynamicValueType> getDefaultBfListItems() {
@@ -352,8 +319,10 @@ public final class Helper {
     public static boolean isClaimantNonSystemUser(CaseData caseData) {
         if (caseData != null) {
             // TODO rework this logic when working on Claimant Gaps
-            return (caseData.getEt1OnlineSubmission() == null && caseData.getHubLinksStatuses() == null)
-                    || YES.equals(defaultIfNull(caseData.getMigratedFromEcm(), NO));
+            boolean isNotaSystemUser = caseData.getEt1OnlineSubmission() == null
+                                       && caseData.getHubLinksStatuses() == null;
+
+            return isNotaSystemUser || YES.equals(defaultIfNull(caseData.getMigratedFromEcm(), NO));
         }
         return true;
     }
@@ -396,7 +365,7 @@ public final class Helper {
      * @return the last element in the list
      */
     public static <T> T getLast(List<T> list) {
-        return CollectionUtils.isEmpty(list) ? null : list.get(list.size() - 1);
+        return CollectionUtils.isEmpty(list) ? null : list.getLast();
     }
 
     /**
@@ -405,7 +374,7 @@ public final class Helper {
      * @return the first item in the list or null if the list is empty
      */
     public static String getFirstListItem(List<String> list) {
-        return CollectionUtils.isEmpty(list) ? null : list.get(0);
+        return CollectionUtils.isEmpty(list) ? null : list.getFirst();
     }
 
     public static boolean isRepresentedClaimantWithMyHmctsCase(CaseData caseData) {
