@@ -13,7 +13,9 @@ import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
 import uk.gov.hmcts.et.common.model.ccd.CaseDetails;
 import uk.gov.hmcts.et.common.model.ccd.items.JudgementTypeItem;
+import uk.gov.hmcts.et.common.model.ccd.items.RespondentSumTypeItem;
 import uk.gov.hmcts.et.common.model.ccd.types.JudgementType;
+import uk.gov.hmcts.et.common.model.ccd.types.RespondentSumType;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicDepositOrder;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicJudgements;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicLetters;
@@ -21,8 +23,11 @@ import uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicRespo
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.dynamiclists.DynamicRestrictedReporting;
 import uk.gov.hmcts.ethos.utils.CaseDataBuilder;
 
+import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.file.Files;
 import java.nio.file.Paths;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.stream.Stream;
@@ -34,6 +39,7 @@ import static org.junit.jupiter.api.Assertions.assertThrows;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ENGLANDWALES_CASE_TYPE_ID;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.HEARING_TYPE_JUDICIAL_HEARING;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.SCOTLAND_CASE_TYPE_ID;
+import static uk.gov.hmcts.ecm.common.model.helper.Constants.YES;
 import static uk.gov.hmcts.ethos.replacement.docmosis.helpers.DynamicListHelper.DYNAMIC_HEARING_LABEL_FORMAT;
 
 class DynamicListHelperTest {
@@ -46,7 +52,7 @@ class DynamicListHelperTest {
     private DynamicValueType dynamicValueType;
 
     @BeforeEach
-    void setUp() throws Exception {
+    void setUp() throws URISyntaxException, IOException {
         caseDetails1 = generateCaseDetails("caseDetailsTest1.json");
         caseDetails2 = generateCaseDetails("caseDetailsTest2.json");
         caseDetails4 = generateCaseDetails("caseDetailsTest4.json");
@@ -55,7 +61,7 @@ class DynamicListHelperTest {
         dynamicValueType = new DynamicValueType();
     }
 
-    private CaseDetails generateCaseDetails(String jsonFileName) throws Exception {
+    private CaseDetails generateCaseDetails(String jsonFileName) throws URISyntaxException, IOException {
         String json = new String(Files.readAllBytes(Paths.get(Objects.requireNonNull(Thread.currentThread()
             .getContextClassLoader().getResource(jsonFileName)).toURI())));
         ObjectMapper mapper = new ObjectMapper();
@@ -69,19 +75,19 @@ class DynamicListHelperTest {
         dynamicValueType = new DynamicValueType();
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getRepCollection().get(0)
-                .getValue().getDynamicRespRepName().getListItems().get(0));
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getRepCollection().getFirst()
+                .getValue().getDynamicRespRepName().getListItems().getFirst());
     }
 
     @Test
     void populateDynamicRespondentRepList() {
         DynamicRespondentRepresentative.dynamicRespondentRepresentativeNames(caseDetails6.getCaseData());
-        assertNotNull(caseDetails6.getCaseData().getRepCollection().get(0).getValue().getDynamicRespRepName());
+        assertNotNull(caseDetails6.getCaseData().getRepCollection().getFirst().getValue().getDynamicRespRepName());
         dynamicValueType = new DynamicValueType();
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails6.getCaseData().getRepCollection().get(0)
-                .getValue().getDynamicRespRepName().getListItems().get(0));
+        assertEquals(dynamicValueType, caseDetails6.getCaseData().getRepCollection().getFirst()
+                .getValue().getDynamicRespRepName().getListItems().getFirst());
     }
 
     @Test
@@ -91,7 +97,7 @@ class DynamicListHelperTest {
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
         assertEquals(dynamicValueType, caseDetails1.getCaseData().getRestrictedReporting()
-                .getDynamicRequestedBy().getListItems().get(0));
+                .getDynamicRequestedBy().getListItems().getFirst());
     }
 
     @Test
@@ -124,21 +130,21 @@ class DynamicListHelperTest {
         assertNotNull(caseDetails1.getCaseData().getDepositCollection());
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
                 .getValue().getDynamicDepositOrderAgainst().getValue());
         dynamicValueType.setCode("Tribunal");
         dynamicValueType.setLabel("Tribunal");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
                 .getValue().getDynamicDepositRequestedBy().getValue());
     }
 
     @Test
     void dynamicDepositRefund() {
-        caseDetails1.getCaseData().getDepositCollection().get(0).getValue().setDepositRefund("Yes");
+        caseDetails1.getCaseData().getDepositCollection().getFirst().getValue().setDepositRefund("Yes");
         DynamicDepositOrder.dynamicDepositOrder(caseDetails1.getCaseData());
         dynamicValueType.setCode("R: Antonio Vazquez");
         dynamicValueType.setLabel("Antonio Vazquez");
-        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().get(0)
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getDepositCollection().getFirst()
                 .getValue().getDynamicDepositRefundedTo().getValue());
     }
 
@@ -148,7 +154,7 @@ class DynamicListHelperTest {
                 caseDetails1.getCaseData());
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Manchester - 01 Nov 2019");
-        assertEquals(dynamicValueType, dynamicHearingList.get(0));
+        assertEquals(dynamicValueType, dynamicHearingList.getFirst());
         dynamicValueType.setCode("2");
         dynamicValueType.setLabel("2 - Single - Manchester - 25 Nov 2019");
         assertEquals(dynamicValueType, dynamicHearingList.get(1));
@@ -156,21 +162,45 @@ class DynamicListHelperTest {
 
     @Test
     void dynamicLettersEngWales() {
+        List<RespondentSumTypeItem> respondentsWithEcc = createRespondentsWithEccCollection(
+                "EW Respondent 1", "EW Respondent 2");
+        caseDetails1.getCaseData().setRespondentCollection(respondentsWithEcc);
+        
         DynamicLetters.dynamicLetters(caseDetails1.getCaseData(), ENGLANDWALES_CASE_TYPE_ID);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Manchester - 01 Nov 2019");
         assertEquals(dynamicValueType, caseDetails1.getCaseData().getCorrespondenceType()
-                .getDynamicHearingNumber().getListItems().get(0));
+                .getDynamicHearingNumber().getListItems().getFirst());
+        assertNotNull(caseDetails1.getCaseData().getCorrespondenceType().getDynamicRespondentsWithEcc());
+        assertEquals(2, caseDetails1.getCaseData().getCorrespondenceType()
+                .getDynamicRespondentsWithEcc().getListItems().size());
+        dynamicValueType.setCode("EW Respondent 1");
+        dynamicValueType.setLabel("EW Respondent 1");
+        assertEquals(dynamicValueType, caseDetails1.getCaseData().getCorrespondenceType()
+                .getDynamicRespondentsWithEcc().getListItems().getFirst());
+                
         assertNull(caseDetails1.getCaseData().getCorrespondenceScotType());
     }
 
     @Test
     void dynamicLettersScotland() {
+        List<RespondentSumTypeItem> respondentsWithEcc = createRespondentsWithEccCollection(
+                "Scot Respondent", "Another Respondent");
+        caseDetailsScotTest1.getCaseData().setRespondentCollection(respondentsWithEcc);
+        
         DynamicLetters.dynamicLetters(caseDetailsScotTest1.getCaseData(), SCOTLAND_CASE_TYPE_ID);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 - Single - Glasgow - 25 Nov 2019");
         assertEquals(dynamicValueType, caseDetailsScotTest1.getCaseData()
-                .getCorrespondenceScotType().getDynamicHearingNumber().getListItems().get(0));
+                .getCorrespondenceScotType().getDynamicHearingNumber().getListItems().getFirst());
+        assertNotNull(caseDetailsScotTest1.getCaseData().getCorrespondenceScotType().getDynamicRespondentsWithEcc());
+        assertEquals(2, caseDetailsScotTest1.getCaseData().getCorrespondenceScotType()
+                .getDynamicRespondentsWithEcc().getListItems().size());
+        dynamicValueType.setCode("Scot Respondent");
+        dynamicValueType.setLabel("Scot Respondent");
+        assertEquals(dynamicValueType, caseDetailsScotTest1.getCaseData().getCorrespondenceScotType()
+                .getDynamicRespondentsWithEcc().getListItems().getFirst());
+        
         assertNull(caseDetailsScotTest1.getCaseData().getCorrespondenceType());
     }
 
@@ -181,8 +211,8 @@ class DynamicListHelperTest {
         int totalJurisdictions = caseDetails1.getCaseData().getJurCodesCollection().size();
         DynamicValueType dynamicValue = DynamicListHelper
                 .getDynamicValue(caseDetails1.getCaseData().getJurCodesCollection()
-                .get(0).getValue().getJuridictionCodesList());
-        assertEquals(dynamicValue, listItems.get(0));
+                .getFirst().getValue().getJuridictionCodesList());
+        assertEquals(dynamicValue, listItems.getFirst());
         assertEquals(totalJurisdictions, listItems.size());
     }
 
@@ -199,19 +229,19 @@ class DynamicListHelperTest {
         CaseData caseData = caseDetails1.getCaseData();
         DynamicJudgements.dynamicJudgements(caseData);
         int totalHearings = caseData.getHearingCollection().size();
-        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
+        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
         assertEquals(totalHearings, judgementType.getDynamicJudgementHearing().getListItems().size());
     }
 
     @Test
     void dynamicJudgementHearing_HearingDateFilled() {
         CaseData caseData = caseDetails1.getCaseData();
-        caseData.getJudgementCollection().get(0).getValue().setJudgmentHearingDate("2019-11-01");
+        caseData.getJudgementCollection().getFirst().getValue().setJudgmentHearingDate("2019-11-01");
         DynamicJudgements.dynamicJudgements(caseData);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 : Manchester - Single - 2019-11-01");
         assertEquals(dynamicValueType, caseData.getJudgementCollection()
-                .get(0).getValue().getDynamicJudgementHearing().getValue());
+                .getFirst().getValue().getDynamicJudgementHearing().getValue());
     }
 
     @Test
@@ -220,13 +250,13 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingListItems = DynamicListHelper.createDynamicHearingList(caseData);
         DynamicFixedListType listHearing = new DynamicFixedListType();
         listHearing.setListItems(hearingListItems);
-        caseData.getJudgementCollection().get(0).getValue().setDynamicJudgementHearing(listHearing);
+        caseData.getJudgementCollection().getFirst().getValue().setDynamicJudgementHearing(listHearing);
         dynamicValueType.setCode("1");
         dynamicValueType.setLabel("1 : Manchester - Single - 2019-11-01");
-        caseData.getJudgementCollection().get(0).getValue().getDynamicJudgementHearing().setValue(dynamicValueType);
+        caseData.getJudgementCollection().getFirst().getValue().getDynamicJudgementHearing().setValue(dynamicValueType);
         DynamicJudgements.dynamicJudgements(caseData);
         assertEquals(dynamicValueType, caseData.getJudgementCollection()
-                .get(0).getValue().getDynamicJudgementHearing().getValue());
+                .getFirst().getValue().getDynamicJudgementHearing().getValue());
     }
 
     @Test
@@ -235,7 +265,7 @@ class DynamicListHelperTest {
         DynamicJudgements.dynamicJudgements(caseData);
         assertNotNull(caseData.getJudgementCollection());
         int totalHearings = caseData.getHearingCollection().size();
-        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
+        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
         assertEquals(totalHearings, judgementType.getDynamicJudgementHearing().getListItems().size());
     }
 
@@ -245,8 +275,8 @@ class DynamicListHelperTest {
         caseData.setHearingCollection(null);
         DynamicJudgements.dynamicJudgements(caseData);
         assertNotNull(caseData.getJudgementCollection());
-        JudgementType judgementType = caseData.getJudgementCollection().get(0).getValue();
-        assertEquals("No Hearings", judgementType.getDynamicJudgementHearing().getListItems().get(0).getCode());
+        JudgementType judgementType = caseData.getJudgementCollection().getFirst().getValue();
+        assertEquals("No Hearings", judgementType.getDynamicJudgementHearing().getListItems().getFirst().getCode());
     }
 
     @Test
@@ -261,7 +291,7 @@ class DynamicListHelperTest {
         DynamicJudgements.dynamicJudgements(casedata);
 
         assertNotNull(casedata.getJudgementCollection());
-        JudgementType judgementType = casedata.getJudgementCollection().get(0).getValue();
+        JudgementType judgementType = casedata.getJudgementCollection().getFirst().getValue();
         assertNull(judgementType.getJudgmentHearingDate());
     }
 
@@ -280,10 +310,10 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingList = DynamicListHelper.createDynamicHearingList(caseData);
 
         assertEquals(1, hearingList.size());
-        assertEquals(hearingNumber, hearingList.get(0).getCode());
+        assertEquals(hearingNumber, hearingList.getFirst().getCode());
         String expectedLabel = String.format(DYNAMIC_HEARING_LABEL_FORMAT, hearingNumber, HEARING_TYPE_JUDICIAL_HEARING,
                 venue, "25 Nov 2019");
-        assertEquals(expectedLabel, hearingList.get(0).getLabel());
+        assertEquals(expectedLabel, hearingList.getFirst().getLabel());
     }
 
     @ParameterizedTest
@@ -302,10 +332,10 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingList = DynamicListHelper.createDynamicHearingList(caseData);
 
         assertEquals(1, hearingList.size());
-        assertEquals(hearingNumber, hearingList.get(0).getCode());
+        assertEquals(hearingNumber, hearingList.getFirst().getCode());
         String expectedLabel = String.format(DYNAMIC_HEARING_LABEL_FORMAT, hearingNumber, HEARING_TYPE_JUDICIAL_HEARING,
                 venue, "25 Nov 2019");
-        assertEquals(expectedLabel, hearingList.get(0).getLabel());
+        assertEquals(expectedLabel, hearingList.getFirst().getLabel());
     }
 
     private static Stream<Arguments> testCreateDynamicHearingListWithScotlandVenue() {
@@ -327,7 +357,8 @@ class DynamicListHelperTest {
                         Constants.HEARING_STATUS_HEARD,
                         true)
                 .build();
-        caseData.getHearingCollection().get(0).getValue().setHearingVenueScotland(TribunalOffice.LEEDS.getOfficeName());
+        caseData.getHearingCollection().getFirst().getValue()
+                .setHearingVenueScotland(TribunalOffice.LEEDS.getOfficeName());
 
         assertThrows(IllegalStateException.class, () -> DynamicListHelper.createDynamicHearingList(caseData));
     }
@@ -346,9 +377,94 @@ class DynamicListHelperTest {
         List<DynamicValueType> hearingList = DynamicListHelper.createDynamicHearingList(caseData);
 
         assertEquals(1, hearingList.size());
-        assertEquals(hearingNumber, hearingList.get(0).getCode());
+        assertEquals(hearingNumber, hearingList.getFirst().getCode());
         String expectedLabel = String.format(DYNAMIC_HEARING_LABEL_FORMAT, hearingNumber, HEARING_TYPE_JUDICIAL_HEARING,
                 null, "25 Nov 2019");
-        assertEquals(expectedLabel, hearingList.get(0).getLabel());
+        assertEquals(expectedLabel, hearingList.getFirst().getLabel());
+    }
+    
+    @Test
+    void testCreateDynamicRespondentWithEccList_WithRespondents() {
+        CaseData caseData = new CaseData();
+        List<RespondentSumTypeItem> respondentsWithEcc = createRespondentsWithEccCollection(
+                "Respondent A", "Respondent B", "Respondent C");
+        caseData.setRespondentCollection(respondentsWithEcc);
+        
+        List<DynamicValueType> resultList = DynamicListHelper.createDynamicRespondentWithEccList(caseData);
+        
+        assertEquals(3, resultList.size());
+
+        assertNotNull(resultList.getFirst().getCode()); // ID is auto-generated
+        assertEquals("Respondent A", resultList.getFirst().getLabel());
+        assertEquals("Respondent B", resultList.get(1).getLabel());
+        assertEquals("Respondent C", resultList.get(2).getLabel());
+    }
+    
+    @Test
+    void testCreateDynamicRespondentWithEccList_NoRespondents() {
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(null);
+        
+        List<DynamicValueType> resultList = DynamicListHelper.createDynamicRespondentWithEccList(caseData);
+        
+        assertEquals(0, resultList.size());
+    }
+    
+    @Test
+    void testCreateDynamicRespondentWithEccList_EmptyCollection() {
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(new ArrayList<>());
+        
+        List<DynamicValueType> resultList = DynamicListHelper.createDynamicRespondentWithEccList(caseData);
+        
+        assertEquals(0, resultList.size());
+    }
+    
+    @Test
+    void testCreateDynamicRespondentWithEccList_WithBlankRespondentName() {
+        RespondentSumTypeItem blankItem = new RespondentSumTypeItem();
+        blankItem.setId("blank-id");
+        RespondentSumType blankRespondent = new RespondentSumType();
+        blankRespondent.setRespondentName("");
+        blankRespondent.setRespondentEcc(YES);
+        blankItem.setValue(blankRespondent);
+
+        List<RespondentSumTypeItem> respondentsWithEcc = new ArrayList<>();
+        respondentsWithEcc.add(blankItem);
+        
+        RespondentSumTypeItem validItem = new RespondentSumTypeItem();
+        validItem.setId("valid-id");
+        RespondentSumType validRespondent = new RespondentSumType();
+        validRespondent.setRespondentName("Valid Respondent");
+        validRespondent.setRespondentEcc(YES);
+        validItem.setValue(validRespondent);
+        respondentsWithEcc.add(validItem);
+
+        CaseData caseData = new CaseData();
+        caseData.setRespondentCollection(respondentsWithEcc);
+        
+        List<DynamicValueType> resultList = DynamicListHelper.createDynamicRespondentWithEccList(caseData);
+        
+        assertEquals(2, resultList.size());
+
+        assertNotNull(resultList.getFirst().getCode()); // ID is auto-generated
+        assertEquals("", resultList.getFirst().getLabel());
+
+        assertNotNull(resultList.get(1).getCode()); // ID is auto-generated
+        assertEquals("Valid Respondent", resultList.get(1).getLabel());
+    }
+    
+    private List<RespondentSumTypeItem> createRespondentsWithEccCollection(String... respondentNames) {
+        List<RespondentSumTypeItem> respondentCollection = new ArrayList<>();
+        for (int i = 0; i < respondentNames.length; i++) {
+            RespondentSumType respondentSumType = new RespondentSumType();
+            respondentSumType.setRespondentName(respondentNames[i]);
+            respondentSumType.setRespondentEcc(YES);
+            RespondentSumTypeItem item = new RespondentSumTypeItem();
+            item.setId("id" + (i + 1)); // Set an ID for testing
+            item.setValue(respondentSumType);
+            respondentCollection.add(item);
+        }
+        return respondentCollection;
     }
 }
