@@ -8,7 +8,6 @@ import org.springframework.test.context.junit.jupiter.SpringExtension;
 import uk.gov.hmcts.ecm.common.idam.models.UserDetails;
 import uk.gov.hmcts.ecm.common.model.helper.DefaultValues;
 import uk.gov.hmcts.ecm.common.model.helper.TribunalOffice;
-import uk.gov.hmcts.et.common.model.bulk.BulkData;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicFixedListType;
 import uk.gov.hmcts.et.common.model.bulk.types.DynamicValueType;
 import uk.gov.hmcts.et.common.model.ccd.CaseData;
@@ -27,13 +26,13 @@ import uk.gov.hmcts.ethos.replacement.docmosis.domain.documents.TornadoDocument;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.HelperTest;
 import uk.gov.hmcts.ethos.replacement.docmosis.helpers.SignificantItemType;
 import uk.gov.hmcts.ethos.replacement.docmosis.idam.IdamApi;
+import uk.gov.hmcts.ethos.replacement.docmosis.service.applications.TseService;
 import uk.gov.hmcts.ethos.utils.TseApplicationBuilder;
 
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URI;
-import java.net.URL;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
@@ -56,7 +55,6 @@ import static uk.gov.hmcts.ecm.common.model.helper.Constants.ENGLANDWALES_LISTIN
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.HEARING_DOC_ETCL;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.HEARING_ETCL_STAFF;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.LETTER_ADDRESS_ALLOCATED_OFFICE;
-import static uk.gov.hmcts.ecm.common.model.helper.Constants.LIST_CASES_CONFIG;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.OPEN_STATE;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.SCOTLAND_CASE_TYPE_ID;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.SINGLE_HEARING_DATE_TYPE;
@@ -82,7 +80,7 @@ class TornadoServiceTest {
     private static final String INITIAL_CONSIDERATION_PDF = "Initial Consideration.pdf";
 
     @BeforeEach
-    public void setUp() throws IOException {
+    void setUp() throws IOException {
         createUserService();
         mockTornadoConnection();
         mockDocumentManagement();
@@ -110,15 +108,6 @@ class TornadoServiceTest {
 
         assertThrows(IOException.class, () ->
                 tornadoService.listingGeneration(AUTH_TOKEN, createListingData(), ENGLANDWALES_LISTING_CASE_TYPE_ID)
-        );
-    }
-
-    @Test
-    void scheduleGenerationNoTornadoConnectionShouldThrowException() throws IOException {
-        when(tornadoConnection.createConnection()).thenThrow(IOException.class);
-
-        assertThrows(IOException.class, () ->
-                tornadoService.scheduleGeneration(AUTH_TOKEN, createBulkData(), ENGLANDWALES_LISTING_CASE_TYPE_ID)
         );
     }
 
@@ -194,19 +183,6 @@ class TornadoServiceTest {
     }
 
     @Test
-    void shouldCreateDocumentInforForScheduleGeneration() throws IOException {
-        mockConnectionSuccess();
-        BulkData bulkData = new BulkData();
-        bulkData.setScheduleDocName(LIST_CASES_CONFIG);
-        bulkData.setSearchCollection(new ArrayList<>());
-
-        DocumentInfo documentInfo = tornadoService.scheduleGeneration(
-            AUTH_TOKEN, bulkData, ENGLANDWALES_LISTING_CASE_TYPE_ID);
-
-        verifyDocumentInfo(documentInfo);
-    }
-
-    @Test
     void shouldCreateDocumentInfoForReportGeneration() throws IOException {
         mockConnectionSuccess();
         ListingData listingData = createListingData();
@@ -275,7 +251,8 @@ class TornadoServiceTest {
         mockConnectionSuccess();
 
         assertThrows(IllegalArgumentException.class, () ->
-                tornadoService.generateEventDocument(new CaseData(), AUTH_TOKEN, ENGLANDWALES_CASE_TYPE_ID, null)
+                tornadoService.generateEventDocument(new CaseData(),
+                        AUTH_TOKEN, ENGLANDWALES_CASE_TYPE_ID, null)
         );
     }
 
@@ -323,7 +300,7 @@ class TornadoServiceTest {
     }
 
     private void mockTornadoConnection() throws IOException {
-        mockConnection = new MockHttpURLConnection(new URL("http://testdocmosis"));
+        mockConnection = new MockHttpURLConnection(URI.create("http://testdocmosis").toURL());
         tornadoConnection = mock(TornadoConnection.class);
         when(tornadoConnection.createConnection()).thenReturn(mockConnection);
     }
@@ -383,13 +360,6 @@ class TornadoServiceTest {
         listingData.setListingCollection(new ArrayList<>(Collections.singleton(listingTypeItem)));
 
         return listingData;
-    }
-
-    private BulkData createBulkData() {
-        BulkData bulkData = new BulkData();
-        bulkData.setScheduleDocName(LIST_CASES_CONFIG);
-        bulkData.setSearchCollection(new ArrayList<>());
-        return bulkData;
     }
 
     private void verifyDocumentInfo(DocumentInfo documentInfo) {
